# HW_30

./: .gitignore  csv_to_json.py  docker-compose.yaml  manage.py  pyproject.toml  readme.md
HW_28/: settings.py  urls.py
HW_29/: asgi.py  settings.py  urls.py  wsgi.py
HW_30/: asgi.py  settings.py  urls.py  wsgi.py
ad/: models.py  permissions.py  serializers.py  urls.py  views.py
ad/migrations/: 0001_initial.py  0002_alter_ad_category.py  0002_initial.py  0002_remove_user_location_alter_ad_options_and_more.py  0003_rename_ad_ads.py  0003_selection.py  0004_rename_ads_ad.py
ads/: models.py  urls.py  views.py
ads/fixtures/: ad.json  ads.json  category.json  location.json  user.json
ads/migrations/: 0001_initial.py
category/: models.py  urls.py  views.py
category/migrations/: 0001_initial.py  0002_alter_category_name.py
fixtures/: location.json  user.json
location/: admin.py  models.py  urls.py
location/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py
pgdata/: postmaster.pid
pgdata/base/13455/: 1247  1249  1259  16384  16386  16392  16394  16396  16399  16401  16403  16405  16408  16410  16415  16417  16419  16424  16426  (+87 more)
pgdata/global/: pg_control  pg_internal.init
pgdata/pg_stat_tmp/: db_0.stat  db_13455.stat  global.stat
postgres_data/: postmaster.pid
postgres_data/global/: pg_control
postgres_data/pg_stat_tmp/: db_0.stat  db_13455.stat  global.stat
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_age.py  0002_user_location.py  0003_alter_user_role.py
(+53 files in other folders)
